debug various typos

--- a/settings.html
+++ b/settings.html
@@ -12,15 +12,15 @@
 
     <div id="active-touch-container">
 
-      <label>Invisible Touch Is On</label>
+      <label>Invisible Touch Is On:</label>
       <label class="switch">
         <input id='timer-active-input' type="checkbox">
         <span class="slider round"></span>
       </label>
 
-    </div>
+      <label>Press `z` to undo the last invisible touch while this is active</label>
 
-    <button id="undo-button">Undo</button>
+    </div>
 
     <!-- Error content if applicable -->
     <div id="error-content" class="hidden">
