Added styling to popup, renamed to touch of invisibility

--- a/settings.html
+++ b/settings.html
@@ -12,18 +12,17 @@
 
     <div id="active-touch-container">
 
-      <label>Invisible Touch Is On:</label>
+      <label>Active:</label>
+
       <label class="switch">
         <input id='timer-active-input' type="checkbox">
         <span class="slider round"></span>
       </label>
 
-      <label>Press `z` to undo the last invisible touch while this is active</label>
+      <br/>
 
-    </div>
+      <label id="helper-text">Press `z` to undo your last touch of invisibility...</label>
 
-    <!-- Error content if applicable -->
-    <div id="error-content" class="hidden">
     </div>
 
     <script src="settings.js"></script>
