Added right click functionality

--- a/settings.html
+++ b/settings.html
@@ -21,7 +21,7 @@
 
       <br/>
 
-      <label id="helper-text">Press `z` to undo your last touch of invisibility...</label>
+      <label id="helper-text">Press `z` to undo your last touch of invisibility<br><br>Right click also works!</label>
 
     </div>
 
