added divination touch for funzies

--- a/settings.html
+++ b/settings.html
@@ -12,10 +12,17 @@
 
     <div id="active-touch-container">
 
-      <label>Active:</label>
+      <label>Touch of Invisibility:</label>
 
       <label class="switch">
-        <input id='timer-active-input' type="checkbox">
+        <input id='invisible-touch-input' type="checkbox">
+        <span class="slider round"></span>
+      </label>
+
+      <label>Touch of Divination:</label>
+
+      <label class="switch">
+        <input id='divination-touch-input' type="checkbox">
         <span class="slider round"></span>
       </label>
 
